Validate URLs without deprecated API